# StockManagement

./: .gitignore  pyproject.toml
StocksApplication/: main.py  main.spec  requirements.txt
StocksApplication/DBModels/: DBModels.py  __init__.py  stocks.db
StocksApplication/StockManager/: interfaces.py  repositories.py  services.py
StocksApplication/ui/: DeleteStockGroup.ui  EditStock.ui  EditStockGroup.ui  StockManagement.ui  StockOperations.ui
